spl2/hn_tests/failing/flip3a-1.hn
main = {
	flip f = {
		flipped x = f x
		flipped
	}
	(flip incr) 3
}